Is hyper parameter the right word here? Hyper parameters usually describe details of the learning process rather than model parameters?

--- a/lecture_1/LinearRegression.ipynb
+++ b/lecture_1/LinearRegression.ipynb
@@ -135,7 +135,7 @@
     "\n",
     "Having generated the data we will now build a model for the optimisation problem. For this we need to make a Dense layer with a linear activation function.  If we are interested in tuning intial parameters for this model, then that can accelerate the optimisation process; but here we use the nominal values assigned when randomly initialised.\n",
     "\n",
-    "The hyper parameters of the model are a single weight and a single bias, i.e. $m$ and $c$, respectively. These parameters need to be optimised, and here we use the Mean Square Error loss function. i.e.\n",
+    "The parameters of the model are a single weight and a single bias, i.e. $m$ and $c$, respectively. These parameters need to be optimised, and here we use the Mean Square Error loss function. i.e.\n",
     "\n",
     "                 $$MSE = \\frac{1}{n}\\sum\\limits_{i=1}^{n} (y_i - \\widehat{y}(x_i))$$\n",
     "\n",
