As far as I can tell, only loss is a key (at least in the version of TF I was using.

--- a/lecture_1/LinearRegression.ipynb
+++ b/lecture_1/LinearRegression.ipynb
@@ -245,9 +245,8 @@
     "\n",
     "history  = model.fit( x_train, y_train, epochs=Nepochs)\n",
     "\n",
-    "# Print out the history keys expected are:\n",
+    "# Print out the history keys, there is a single key:\n",
     "#    loss        The loss function evaluated at each epoch for the training set\n",
-    "#    acc         The accuracy evaluated at each epoch for the training set\n",
     "print(\"history keys = \", history.history.keys())\n",
     "\n",
     "print(\"Display the evolution of the loss as a function of the training epoch\")\n",
