In the version that I was using, the legend wasnt drawn unless the labels were in square brackets.

--- a/lecture_1/LinearRegression.ipynb
+++ b/lecture_1/LinearRegression.ipynb
@@ -345,7 +345,7 @@
     "plt.plot([xmin, xmax], [ymin, ymax], \"b-\")  # plot the fitted line\n",
     "plt.ylabel('y')\n",
     "plt.xlabel('x')\n",
-    "plt.legend(\"test data\", \"fitted model\")\n",
+    "plt.legend([\"test data\", \"fitted model\"], loc=0)\n",
     "plt.show()\n"
    ]
   },
